--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
-                        <li class="journal"><B>Journal of Political Economy Macroeconomics</B>, accepted</li>
+                        <li class="journal"><B>Journal of Political Economy Macroeconomics</B>, Volume 1, Issue 1, March 2023, Pages 80-118</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#recreation_prices">(abstract)</a>
                             <a target="_blank" href="files/papers/Recreation_prices/paper.pdf">(paper)</a>
@@ -371,7 +371,7 @@
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="http://www.econ.ucla.edu/pfajgelbaum/">Pablo Fajgelbaum</a> and <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <li class="journal"><B>Quarterly Journal of Economics</B>, Volume 132, Issue 4, 1 November 2017, Pages 1641–1692</li>
+                        <li class="journal"><B>Quarterly Journal of Economics</B>, Volume 132, Issue 4, November 2017, Pages 1641–1692</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#collapse_UT">(abstract)</a>
                             <a target="_blank" href="files/papers/Uncertainty Traps/paper.pdf">(paper)</a>
@@ -400,12 +400,23 @@
             </div>
         </div>
         <div class="papers">
+            <div class="container">
+                <div class="discussion">
+                    <h4 class="title">Strategic Complementarities in a Dynamic Model of Technology Adoption: P2P Digital Payments</h4>
+                    <ul>
+                        <li class="journal"><B>Cowles Macro Summer Conference</B>, June 2023</li>
+                        <li class="co-authors">by Fernando Alvarez, David Argente, Francesco Lippi, Esteban Mendez and Diana Van Patten, <a target="_blank" href="">(slides)</a></li>
+                    </ul>
+                </div>
+            </div>
+
 
             <div class="container">
                 <div class="discussion">
                     <h4 class="title">A Theory of Payments-Chain Crises</h4>
                     <ul>
-                        <li class="co-authors">by Saki Bigio, April 2023, <a target="_blank" href="files/discussions/2023_04_Bigio.pdf">(slides)</a></li>
+                        <li class="journal"><B>Advances in Macro-Finance Tepper-LAEF Conference</B>, April 2023</li>
+                        <li class="co-authors">by Saki Bigio, <a target="_blank" href="files/discussions/2023_04_Bigio.pdf">(slides)</a></li>
                     </ul>
                 </div>
             </div>
@@ -415,7 +426,8 @@
               <div class="discussion">
                   <h4 class="title">Switching-Track after the Great Recession</h4>
                   <ul>
-                      <li class="co-authors">by Francesca Vinci and Omar Licandro, June 2021, <a target="_blank" href="files/discussions/2021_06_Vinci_Licandro.pdf">(slides)</a></li>
+                      <li class="journal"><B>Bank of Canada Workshop on Monetary Policy Research</B>, June 2021</li>
+                      <li class="co-authors">by Francesca Vinci and Omar Licandro, <a target="_blank" href="files/discussions/2021_06_Vinci_Licandro.pdf">(slides)</a></li>
                   </ul>
               </div>
           </div>
@@ -425,7 +437,8 @@
               <div class="discussion">
                   <h4 class="title">Optimal Monetary Policy in Production Networks</h4>
                   <ul>
-                      <li class="co-authors">by Jennifer La’O and Alireza Tahbaz-Salehi, March 2021, <a target="_blank" href="files/discussions/2021_03_LaO_TahbazSalehi.pdf">(slides)</a></li>
+                      <li class="journal"><B>San Fransisco Fed Macro Conference</B>, March 2021</li>
+                      <li class="co-authors">by Jennifer La’O and Alireza Tahbaz-Salehi, <a target="_blank" href="files/discussions/2021_03_LaO_TahbazSalehi.pdf">(slides)</a></li>
                   </ul>
               </div>
           </div>
@@ -434,7 +447,8 @@
               <div class="discussion">
                   <h4 class="title">The Transmission of Shocks in Endogenous Financial Networks: A Structural Approach</h4>
                   <ul>
-                      <li class="co-authors">by Jonas Heipertz, Amine Ouazad and Romain Rancière, February 2020, <a target="_blank" href="files/discussions/2020_02_Heipertz_Ouazad_Ranciere.pdf">(slides)</a></li>
+                    <li class="journal"><B>UBC Winter Conference</B>, February 2020</li>
+                      <li class="co-authors">by Jonas Heipertz, Amine Ouazad and Romain Rancière, <a target="_blank" href="files/discussions/2020_02_Heipertz_Ouazad_Ranciere.pdf">(slides)</a></li>
                   </ul>
               </div>
           </div>
@@ -443,7 +457,8 @@
                 <div class="discussion">
                     <h4 class="title">Discount Rates and Employment Fluctuations</h4>
                     <ul>
-                        <li class="co-authors">by Jaroslav Borovicka and Katarina Borovickova, June 2016, <a target="_blank" href="files/discussions/2016_06_Borovicka_Borovickova.pdf">(slides)</a></li>
+                        <li class="journal"><B>Cowles Macro and Labor Conference</B>, June 2016</li>
+                        <li class="co-authors">by Jaroslav Borovicka and Katarina Borovickova, <a target="_blank" href="files/discussions/2016_06_Borovicka_Borovickova.pdf">(slides)</a></li>
                     </ul>
                 </div>
             </div>
@@ -452,7 +467,8 @@
                 <div class="discussion">
                     <h4 class="title">A Model of the Reserve Asset</h4>
                     <ul>
-                        <li class="co-authors">by Zhiguo He, Arvind Krishnamurthy and Konstantin Milbradt, January 2016, <a target="_blank" href="files/discussions/2016_01_He_Krishnamurthy_Milbradt.pdf">(slides)</a></li>
+                        <li class="journal"><B>AEA Meeting</B>, January 2916</li>
+                        <li class="co-authors">by Zhiguo He, Arvind Krishnamurthy and Konstantin Milbradt, <a target="_blank" href="files/discussions/2016_01_He_Krishnamurthy_Milbradt.pdf">(slides)</a></li>
                     </ul>
                 </div>
             </div>
@@ -461,7 +477,8 @@
                 <div class="discussion">
                     <h4 class="title">Uncertainty, Wages, and the Business Cycle</h4>
                     <ul>
-                        <li class="co-authors">by Matteo Cacciatore and Federico Ravenna, November 2015, <a target="_blank" href="files/discussions/2015_11_CacciatoreRavenna.pdf">(slides)</a></li>
+                        <li class="journal"><B>Canadian Macroeconomics Study Group</B>, November 2015</li>
+                        <li class="co-authors">by Matteo Cacciatore and Federico Ravenna, <a target="_blank" href="files/discussions/2015_11_CacciatoreRavenna.pdf">(slides)</a></li>
                     </ul>
                 </div>
             </div>
@@ -470,7 +487,8 @@
                 <div class="discussion">
                     <h4 class="title">Who Do Unions Target? Unionization Over the Life-Cycle of U.S. Businesses</h4>
                     <ul>
-                        <li class="co-authors">by Emin Dinlersoz, Jeremy Greenwood and Henry Hyatt, January 2015, <a target="_blank" href="files/discussions/2015_01_DinlersozGreenwoodHyatt.pdf">(slides)</a></li>
+                        <li class="journal"><B>AEA Meeting</B>, January 2015</li>
+                        <li class="co-authors">by Emin Dinlersoz, Jeremy Greenwood and Henry Hyatt, <a target="_blank" href="files/discussions/2015_01_DinlersozGreenwoodHyatt.pdf">(slides)</a></li>
                     </ul>
                 </div>
             </div>
@@ -479,7 +497,8 @@
                 <div class="discussion">
                     <h4 class="title">Default Risk and Aggregate Fluctuations in an Economy with Production Heterogeneity</h4>
                     <ul>
-                        <li class="co-authors">by Aubhik Khan, Tatsuro Senga and Julia K. Thomas, June 2014, <a target="_blank" href="files/discussions/2014_06_KhanSengaThomas.pdf">(slides)</a></li>
+                        <li class="journal"><B>Centre for Asset Pricing Research Workshop</B>, June 2014</li>
+                        <li class="co-authors">by Aubhik Khan, Tatsuro Senga and Julia K. Thomas, <a target="_blank" href="files/discussions/2014_06_KhanSengaThomas.pdf">(slides)</a></li>
                     </ul>
                 </div>
             </div>
