--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <li class="journal"><B>Journal of Economic Theory</B>, accepted</li>
+                        <li class="journal"><B>Journal of Economic Theory</B>, Volume 210, June 2023, 105669</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#HerdingCycles">(abstract)</a>
                             <a target="_blank" href="files/papers/HerdingCycles/paper.pdf">(paper)</a>
