--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     <h4 class="title">Strategic Complementarities in a Dynamic Model of Technology Adoption: P2P Digital Payments</h4>
                     <ul>
                         <li class="journal"><B>Cowles Macro Summer Conference</B>, June 2023</li>
-                        <li class="co-authors">by Fernando Alvarez, David Argente, Francesco Lippi, Esteban Mendez and Diana Van Patten, <a target="_blank" href="files/discussions/2023_06_Alvarez">(slides)</a></li>
+                        <li class="co-authors">by Fernando Alvarez, David Argente, Francesco Lippi, Esteban Mendez and Diana Van Patten, <a target="_blank" href="files/discussions/2023_06_Alvarez.pdf">(slides)</a></li>
                     </ul>
                 </div>
             </div>
