--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                 <ul>
                     <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a>, <a href="https://economics.cornell.edu/bineet-mishra">Bineet Mishra</a> and <a  href="http://www.kris-nimark.net">Kristoffer Nimark</a></li>
-                    <li class="journal">Revise and resubmit, <B>Econometrica </B></li>
+                    <li class="journal">Conditionally accepted, <B>Econometrica </B></li>
                     <li class="after-title">
                         <a data-toggle="collapse" href="#network_uncertainty">(abstract)</a>
                         <a href="files/papers/network_uncertainty/paper.pdf">(paper)</a>
