--- a/index.html
+++ b/index.html
@@ -168,38 +168,6 @@
 
 
 
-          <div class="container">
-            <div class="paper">
-                <h4 class="title">Endogenous Production Networks under Supply Chain Uncertainty</h4>
-
-                <ul>
-                    <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a>, <a href="https://economics.cornell.edu/bineet-mishra">Bineet Mishra</a> and <a  href="http://www.kris-nimark.net">Kristoffer Nimark</a></li>
-                    <li class="journal">Conditionally accepted, <B>Econometrica </B></li>
-                    <li class="after-title">
-                        <a data-toggle="collapse" href="#network_uncertainty">(abstract)</a>
-                        <a href="files/papers/network_uncertainty/paper.pdf">(paper)</a>
-                        <a href="files/papers/network_uncertainty/slides.pdf">(slides)</a>
-                        <a href="files/papers/network_uncertainty/slides_short.pdf">(slides short)</a>
-                    </li>
-                </ul>
-
-                <div class="panel panel-transparent">
-                    <div id="network_uncertainty" class="panel-collapse collapse">
-                        <div class="panel-body">Supply chain disturbances can lead to substantial increases in production costs. To mitigate these risks, firms may take steps to reduce their reliance on volatile suppliers. We construct a model of endogenous network formation to investigate how these decisions affect the structure of the production network and the level and volatility of macroeconomic aggregates. When uncertainty increases in the model, producers prefer to purchase from more stable suppliers, even though they might sell at higher prices. The resulting reorganization of the network tends to reduce macroeconomic volatility, but at the cost of a decline in aggregate output. The model also predicts that more productive and stable firms have higher Domar weights—a measure of their importance as suppliers—in the equilibrium network. We provide a basic calibration of the model using U.S. data to evaluate the importance of these mechanisms.</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
 
           <div class="container">
               <div class="paper">
@@ -278,6 +246,29 @@
         </div>
 
         <div class="papers">
+
+            <div class="container">
+                <div class="paper">
+                    <h4 class="title">Endogenous Production Networks under Supply Chain Uncertainty</h4>
+    
+                    <ul>
+                        <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a>, <a href="https://economics.cornell.edu/bineet-mishra">Bineet Mishra</a> and <a  href="http://www.kris-nimark.net">Kristoffer Nimark</a></li>
+                        <li class="journal">Accepted, <B>Econometrica </B></li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#network_uncertainty">(abstract)</a>
+                            <a href="files/papers/network_uncertainty/paper.pdf">(paper)</a>
+                            <a href="files/papers/network_uncertainty/slides.pdf">(slides)</a>
+                            <a href="files/papers/network_uncertainty/slides_short.pdf">(slides short)</a>
+                        </li>
+                    </ul>
+    
+                    <div class="panel panel-transparent">
+                        <div id="network_uncertainty" class="panel-collapse collapse">
+                            <div class="panel-body">Supply chain disturbances can lead to substantial increases in production costs. To mitigate these risks, firms may take steps to reduce their reliance on volatile suppliers. We construct a model of endogenous network formation to investigate how these decisions affect the structure of the production network and the level and volatility of macroeconomic aggregates. When uncertainty increases in the model, producers prefer to purchase from more stable suppliers, even though they might sell at higher prices. The resulting reorganization of the network tends to reduce macroeconomic volatility, but at the cost of a decline in aggregate output. The model also predicts that more productive and stable firms have higher Domar weights—a measure of their importance as suppliers—in the equilibrium network. We provide a basic calibration of the model using U.S. data to evaluate the importance of these mechanisms.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="container">
                 <div class="paper">
