--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                     <h4 class="title">Coordinating Business Cycles</h4>
                     <ul>
                         <li class="co-authors">with <a  href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
+                        <li class="journal">to be presented at the <B>Journal of Monetary Economics</B> <a href="https://szgerzensee.ch/forum/conferences-with-the-journal-of-monetary-economics"> Conference in Honor of Robert E. Lucas, Jr.</a></li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#CBC">(abstract)</a>
                             <a href="files/papers/Coordinating Business Cycles/paper.pdf">(paper)</a>
