--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                         <!-- <h3>Research Interests</h3> -->
                         <span class="interests"><p>Macroeconomics</p></span>
 
-
                         <ul>
                             <li><span class="glyphicon glyphicon-user"></span> <a class="cv" href="files/cv.pdf">Curriculum Vitae</a></li>
+                            <li><span class="glyphicon glyphicon-flash"></span> <a class="cv" href="files/mtd_research_statement.pdf">Research statement</a></li>
                             <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" href="mailto:mt763@cornell.edu">mt763@cornell.edu</a></li>
                             <li><span class="glyphicon glyphicon-globe"></span><a class="cv" href="https://goo.gl/maps/3RFiav3NueM2"> 480 Uris Hall, Cornell University, Ithaca NY 14853</a></li>
                         </ul>
@@ -144,6 +144,27 @@
 
         <div class="papers">
 
+
+            <div class="container">
+                <div class="paper">
+                    <h4 class="title">The Origin of Risk</h4>
+  
+  
+                    <ul>
+                        <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  href="https://www.zebangxu.com">Zebang Xu</a></li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#origin">(abstract)</a>
+                            <a href="files/papers/origin_risk/paper.pdf">(paper)</a>
+                        </li>
+                    </ul>
+  
+                    <div class="panel panel-transparent">
+                        <div id="origin" class="panel-collapse collapse">
+                            <div class="panel-body">We propose a model in which risk at the micro and macro levels is endogenous. In the model, firms can choose the mean and the variance of their productivity process, as well as how it covaries with the productivity of other firms. To study the aggregate impact of these decisions, we embed the firms into an otherwise standard production network economy. Through their impact on risk-taking decisions, distortions such as taxes and markups can make GDP more volatile in equilibrium. The theory also predicts that the productivity of larger firms and those with smaller markups is less volatile and less correlated with aggregate productivity. We find support for these predictions in the data. In a calibrated version of the model, removing distortions significantly reduces GDP volatility.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="container">
                 <div class="paper">
