--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                         <li class="after-title">
                             <a data-toggle="collapse" href="#origin">(abstract)</a>
                             <a href="files/papers/origin_risk/paper.pdf">(paper)</a>
+                            <a href="files/papers/origin_risk/slides.pdf">(slides)</a>
                         </li>
                     </ul>
   
