--- a/index.html
+++ b/index.html
@@ -188,27 +188,6 @@
                 </div>
             </div>
 
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
-                    <ul>
-                        <li class="journal"><B>Review of Economic Studies</B>, conditionally accepted</li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#Network">(abstract)</a>
-                            <a href="files/papers/Network/paper.pdf">(paper)</a>
-                            <a href="files/papers/Network/slides.pdf">(slides)</a>
-                        </li>
-                    </ul>
-
-
-                    <div class="panel panel-transparent">
-                        <div id="Network" class="panel-collapse collapse">
-                            <div class="panel-body">This paper studies the efficient allocation in an economy in which firms are connected through input-output linkages and must pay a fixed cost to produce. When economic conditions are poor, some firms might decide not to operate, thereby severing the links with their neighbors and changing the structure of the production network. Since producers benefit from having access to additional suppliers, nearby firms tend to operate, or not, together. As a result, the production network features clusters of operating firms, and the exit of a producer can create a cascade of firm shutdowns. While well-connected firms are better able to withstand shocks, they trigger larger cascades upon exit. The theory also predicts how the structure of the production network changes over the business cycle. As in the data, recessions are associated with more dispersed networks that feature fewer highly connected firms. In the calibrated economy, the endogenous reorganization of the network substantially dampens the impact of idiosyncratic shocks on aggregate fluctuations.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
 
           <div class="container">
               <div class="paper">
@@ -268,6 +247,27 @@
         </div>
 
         <div class="papers">
+
+            <div class="container">
+                <div class="paper">
+                    <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
+                    <ul>
+                        <li class="journal"><B>Review of Economic Studies</B>, accepted</li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#Network">(abstract)</a>
+                            <a href="files/papers/Network/paper.pdf">(paper)</a>
+                            <a href="files/papers/Network/slides.pdf">(slides)</a>
+                        </li>
+                    </ul>
+
+
+                    <div class="panel panel-transparent">
+                        <div id="Network" class="panel-collapse collapse">
+                            <div class="panel-body">This paper studies the efficient allocation in an economy in which firms are connected through input-output linkages and must pay a fixed cost to produce. When economic conditions are poor, some firms might decide not to operate, thereby severing the links with their neighbors and changing the structure of the production network. Since producers benefit from having access to additional suppliers, nearby firms tend to operate, or not, together. As a result, the production network features clusters of operating firms, and the exit of a producer can create a cascade of firm shutdowns. While well-connected firms are better able to withstand shocks, they trigger larger cascades upon exit. The theory also predicts how the structure of the production network changes over the business cycle. As in the data, recessions are associated with more dispersed networks that feature fewer highly connected firms. In the calibrated economy, the endogenous reorganization of the network substantially dampens the impact of idiosyncratic shocks on aggregate fluctuations.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="container">
                 <div class="paper">
