--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
   
                     <ul>
                         <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  href="https://www.zebangxu.com">Zebang Xu</a></li>
+                        <li class="journal"><B>Quarterly Journal of Economics</B>, reject and resubmit</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#origin">(abstract)</a>
                             <a href="files/papers/origin_risk/paper.pdf">(paper)</a>
