--- a/index.html
+++ b/index.html
@@ -146,6 +146,26 @@
 
             <div class="container">
                 <div class="paper">
+                    <h4 class="title">Echoes and Delays: Time-to-build in Production Networks</h4>
+                    <ul>
+                        <li class="co-authors">with <a  href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#T2B">(abstract)</a>
+                            <a href="files/papers/Time to build/paper.pdf">(paper)</a>
+                            <a href="files/papers/Time to build/slides.pdf">(slides)</a>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="T2B" class="panel-collapse collapse">
+                            <div class="panel-body">We study how time-to-build and delivery lags affect the propagation of sectoral and aggregate shocks in an economy with input-output linkages. Time-to-build significantly contributes to the persistence of shocks, with highly heterogeneous effects across sectors. We analyze delay shocks and demonstrate that bottlenecks can be identified by the product of a sector's supplier and buyer centralities. Shocks propagate asynchronously through the network, generating endogenous fluctuations via an echo effect. These fluctuations arise due to the presence of loops in the network. We show that the Fourier spectrum of sectoral and aggregate output can be predicted from the durations and weights of the network's dominant cycles. Sectoral comovements are complex and can be decomposed into the network's dominant walks.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="paper">
                     <h4 class="title">Coordinating Business Cycles</h4>
                     <ul>
                         <li class="co-authors">with <a  href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
@@ -486,7 +506,7 @@
                 <div class="discussion">
                     <h4 class="title">A Model of the Reserve Asset</h4>
                     <ul>
-                        <li class="journal"><B>AEA Meeting</B>, January 2916</li>
+                        <li class="journal"><B>AEA Meeting</B>, January 2016</li>
                         <li class="co-authors">by Zhiguo He, Arvind Krishnamurthy and Konstantin Milbradt, <a href="files/discussions/2016_01_He_Krishnamurthy_Milbradt.pdf">(slides)</a></li>
                     </ul>
                 </div>
