--- a/index.html
+++ b/index.html
@@ -146,6 +146,27 @@
 
             <div class="container">
                 <div class="paper">
+                    <h4 class="title">Endogenous Returns to Scale</h4>
+                    <ul>
+                        <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  href="https://www.zebangxu.com">Zebang Xu</a></li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#T2B">(abstract)</a>                            
+                            <a href="files/papers/Endogenous_RTS/slides.pdf">(slides)</a>
+                            
+                            <font color="#A9A9A9">(paper coming soon)</font>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="T2B" class="panel-collapse collapse">
+                            <div class="panel-body">We construct a model of a multisector economy in which firms endogenously choose the returns to scale of their production functions. Choosing a technology with higher returns to scale comes with a productivity cost but enables firms to produce more and thus earn higher profits. We characterize how endogenous returns to scale amplify effects of productivity shocks on GDP and the dispersion of firms’ sales across and within sectors. We then calibrate the model to Spanish data and quantify the importance of endogenous returns to scale for aggregate economic outcomes and firm-level heterogeneity.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="paper">
                     <h4 class="title">Echoes and Delays: Time-to-build in Production Networks</h4>
                     <ul>
                         <li class="co-authors">with <a  href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
