--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <!-- <img class="photo-small visible-xs" src="img/2671112_orig.png" alt="Photo small" title="Photo small"> -->
                         <h2 class="name">Mathieu Taschereau-Dumouchel</h2>
                         <ul>
-                            <li>Assistant Professor of Economics</li>
+                            <li>Associate Professor of Economics</li>
                             <li>Robert Jain Faculty Fellow</li>
                         </ul>
                         <!-- <h3>Research Interests</h3> -->
