--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
                         <h2 class="name">Mathieu Taschereau-Dumouchel</h2>
                         <ul>
                             <li>Associate Professor of Economics</li>
-                            <li>Robert Jain Faculty Fellow</li>
                         </ul>
                         <!-- <h3>Research Interests</h3> -->
                         <span class="interests"><p>Macroeconomics</p></span>
@@ -184,27 +183,7 @@
                 </div>
             </div>
 
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">Coordinating Business Cycles</h4>
-                    <ul>
-                        <li class="co-authors">with <a  href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <li class="journal">presented at the <B>Journal of Monetary Economics</B> <a href="https://szgerzensee.ch/forum/conferences-with-the-journal-of-monetary-economics"> Conference in Honor of Robert E. Lucas, Jr.</a></li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#CBC">(abstract)</a>
-                            <a href="files/papers/Coordinating Business Cycles/paper.pdf">(paper)</a>
-                            <a href="files/papers/Coordinating Business Cycles/slides.pdf">(slides)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="CBC" class="panel-collapse collapse">
-                            <div class="panel-body">We develop a quantitative theory of business cycles with coordination failures. Because of demand complementarities and increasing returns, firms seek to coordinate production and multiple equilibria arise. We use a global game approach to discipline equilibrium selection and show that the unique dynamic equilibrium exhibits multiple steady states. Coordination on high production may fail after a large transitory shock, pushing the economy in a quasi-permanent recession. Our calibrated model rationalizes various features of the 2007-2009 recession and its recovery. Government spending, while generally harmful, can increase welfare when the economy is transitioning between steady states. Other policy instruments are preferable to fix miscoordination.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+           
 
             <div class="container">
                 <div class="paper">
@@ -288,6 +267,30 @@
         </div>
 
         <div class="papers">
+
+
+             <div class="container">
+                <div class="paper">
+                    <h4 class="title">Coordinating Business Cycles</h4>
+                    <ul>
+                        <li class="co-authors">with <a  href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
+                        <li class="journal"><B>Journal of Monetary Economics</B>, accepted</li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#CBC">(abstract)</a>
+                            <a href="files/papers/Coordinating Business Cycles/paper.pdf">(paper)</a>
+                            <a href="files/papers/Coordinating Business Cycles/slides.pdf">(slides)</a>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="CBC" class="panel-collapse collapse">
+                            <div class="panel-body">We develop a quantitative theory of business cycles with coordination failures. Because of demand complementarities and increasing returns, firms seek to coordinate production and multiple equilibria arise. We use a global game approach to discipline equilibrium selection and show that the unique dynamic equilibrium exhibits multiple steady states. Coordination on high production may fail after a large transitory shock, pushing the economy in a quasi-permanent recession. Our calibrated model rationalizes various features of the 2007-2009 recession and its recovery. Government spending, while generally harmful, can increase welfare when the economy is transitioning between steady states. Other policy instruments are preferable to fix miscoordination.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
             <div class="container">
                 <div class="paper">
