--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
                             <a data-toggle="collapse" href="#HerdingCycles">(abstract)</a>
                             <a href="files/papers/HerdingCycles/paper.pdf">(paper)</a>
                             <a href="files/papers/HerdingCycles/slides.pdf">(slides)</a>
+                            <a href="https://www.scor.com/en/press-release/scor-pse-chair-macroeconomic-risk-awards-2021-junior-research-prize-edouard-schaal">(SCOR-PSE Junior Research Prize)</a>
                         </li>
                     </ul>
   
