--- a/index.html
+++ b/index.html
@@ -143,7 +143,27 @@
 
         <div class="papers">
 
-              <div class="container">
+            <div class="container">
+                <div class="paper">
+                    <h4 class="title">Endogenous Returns to Scale</h4>
+                    <ul>
+                        <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  href="https://www.zebangxu.com">Zebang Xu</a></li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#RTS">(abstract)</a>
+                            <a href="files/papers/Endogenous_RTS/paper.pdf">(paper)</a>                                                     
+                            <a href="files/papers/Endogenous_RTS/slides.pdf">(slides)</a>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="RTS" class="panel-collapse collapse">
+                            <div class="panel-body">We develop a general equilibrium model in which firms choose how scalable their production technologies are. More scalable technologies make it easier for firms to expand output but are less effective at small scale. In equilibrium, more productive firms adopt more scalable technologies and grow disproportionately large. As a result, the tail of the size distribution becomes thicker and, as resources reallocate to the most productive producers, GDP increases. Over the long-run, as aggregate productivity rises, firms adopt more scalable technologies, which lowers input prices, leading to further increases in scalability. Through this supply-chain amplification process, endogenous returns to scale raise the growth rate of GDP. A calibrated version of the model shows that these effects are quantitatively significant. We also document support for the model's predictions in firm-level data.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
+            
+            <div class="container">
                 <div class="paper">
                     <h4 class="title">The Origin of Risk</h4>
   
@@ -166,25 +186,7 @@
                 </div>
             </div>
 
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">Endogenous Returns to Scale</h4>
-                    <ul>
-                        <li class="co-authors">with <a  href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  href="https://www.zebangxu.com">Zebang Xu</a></li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#RTS">(abstract)</a>         
-                            <font color="#A9A9A9">(paper coming soon)</font>                   
-                            <a href="files/papers/Endogenous_RTS/slides.pdf">(slides)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="RTS" class="panel-collapse collapse">
-                            <div class="panel-body">We construct a model of a multisector economy in which firms endogenously choose the returns to scale of their production functions. Choosing a technology with higher returns to scale comes with a productivity cost but enables firms to produce more and thus earn higher profits. We characterize how endogenous returns to scale amplify effects of productivity shocks on GDP and the dispersion of firms’ sales across and within sectors. We then calibrate the model to Spanish data and quantify the importance of endogenous returns to scale for aggregate economic outcomes and firm-level heterogeneity.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
 
             <div class="container">
                 <div class="paper">
